pc wireframe finished

--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -1,25 +1,25 @@
 // FUNCTIONS
-//    =============================
+//=============================
     @import 'src/scss/_functions';
 
 // MIXINS
-//  =============================
+//=============================
     @import 'src/scss/_mixins';
 
 // VARIABLES
-//  =============================
+//=============================
     @import 'src/scss/_variables';
 
 // GLOBAL SETTINGS
-//    =============================
+//=============================
     @import 'src/scss/_globals';
 
 // REPEATING SECTIONS
-//    =============================
+//=============================
     @import 'src/scss/_repcontrol';
 
 /* HIDE DIFFERENT SHEET TYPES BY DEFAULT
-   ============================= */ 
+============================= */ 
     div.sheet-npc,
     div.sheet-pc,
     div.sheet-settings {
@@ -44,7 +44,7 @@
     } 
 
 /* GRID
-   ============================= */ 
+============================= */ 
     div.sheet-grid {
         display: inline-grid;
         //grid-column-gap: 0.2em;
@@ -63,45 +63,47 @@
     }
 
 /* TABS & LOGO SECTION
-   ============================= */
-    img[alt="Delta Green"] {
-        width: 100%;
-    }
-
+============================= */
     div.sheet-tabs {
-        grid-template-columns: 8em 1fr 8em 4em 8em;
+        grid-template-columns: 8em 1fr 3em;
         margin-bottom: 0.5%;
+        @include back-color($maincolor);
 
         label > input {
             width: 100%;
+        }
+
+        img {
+            @include grid-area(1, 2, 3, 2);
         }
 
         button[name='attr_gm_toggle'] {
             @include grid-area(1, 1, 1, 1);
         }
 
-        button[name='act_sheet_page1'] {
+        button[name='act_toggle_character'] {
             @include grid-area(1, 3, 1, 3);
         }
 
-        button[name='act_sheet_page2'] {
-            @include grid-area(1, 4, 1, 4);
+        button[name='act_toggle_npc'] {
+            @include grid-area(2, 3, 2, 3);
         }
 
-        button[name='act_sheet_select'] {
-            @include grid-area(1, 5, 1, 5);
+        input.sheet-whisper-toggle[value='/w gm'] ~ button > span.sheet-hidden > span.sheet-off,
+        input.sheet-whisper-toggle[value=' '] ~ button > span.sheet-hidden > span.sheet-on {
+            display: none;
         }
     }
 
 /* GENERIC CLASSES
-    ============================= */
+============================= */
     .sheet-border { border: 0.15em solid $maincolor; }
     .sheet-border-bottom { border-bottom: 0.15em solid $maincolor; }
     .sheet-center { @include text-align(center); }
+    .sheet-header-body { grid-template-columns: 3em 1fr; }
     .sheet-italic {font-style: italic;}
     .sheet-margin-left {margin-left: 2%; }
     .sheet-pictos { font-family: $pictos; }
-    .sheet-header-body { grid-template-columns: 3em 1fr; }
 
     h2.sheet-aligned-left,
     h3.sheet-aligned-left { 
@@ -110,7 +112,7 @@
     }
 
 /* STYLED CHECKBOXES
-    ============================= */
+============================= */
     label.sheet-styled-checkbox {
         input[type='checkbox'] {
             height: 1.5em;
@@ -127,10 +129,10 @@
     } */
 
 /* NPC SHEET
-    ============================= */
+============================= */
     
 /* PC SHEET
-   ============================= */
+============================= */
    div.sheet-pc {
         grid-column-gap: 0.2em;
         grid-row-gap: 0.2em;
@@ -356,6 +358,14 @@
             div.sheet-section-weapons {
                 grid-template-columns: 8em 0.155em 1fr 0.155em 2fr 0.155em 2fr 0.155em 3fr 0.155em 2fr 0.155em 2fr 0.155em 1fr;
             }
+
+            div.sheet-repeating-container {
+                .repcontrol {
+                    .repcontrol_add {
+                        right: -93%;
+                    }
+                }
+            }
         }
 
 
@@ -363,6 +373,27 @@
         ----------------------------- */
         div.sheet-remarks {
             grid-column: 1 / 3;
+
+            div.sheet-section-body {
+                grid-template-columns: 1fr 0.155em 1fr;
+
+
+                div.sheet-section-19 {
+                    grid-template-columns: 1fr 0.155em 1fr;
+                }
+
+                div.sheet-repeating-container {
+                    .repcontrol {
+                        .repcontrol_add {
+                            right: -83%;
+                        }
+                    }
+                }
+            }
+
+            div.sheet-section-directions {
+                grid-column: 1 / 4;
+            }
         }
 
 
@@ -375,8 +406,48 @@
             h2 { grid-row: 1; }
             label { grid-row: 2; }
         }
+
+        /* BOTTOM DECORATION
+        ----------------------------- */
+        div.sheet-section-bottom-decor {
+            grid-column: 1 / 3;
+            grid-template-columns: 3em 1fr 20em 3fr 5em;
+            margin-top: 2%;
+
+            span {
+                text-transform: uppercase;
+
+                &:nth-of-type(odd) { 
+                    color: $maincolor;
+                    font-size: 1.5em;
+                    font-weight: bolder;
+                }
+
+                &:nth-of-type(even) {
+                    color: $gray;
+                    opacity: 0.8;
+                    text-align: center;
+                }
+            }
+        }
     }   
 
+/* SETTINGS SHEET
+============================= */
+    button[name="act_sheet_select"] {
+        height: 2em;
+        width: 2em;
+    }
 
-/* FOOTER
-   ============================= */
+/* ACCESSIBILITY ADJUSTMENTS
+============================= */
+    .sheet-hidden {
+        clip     : rect(1px, 1px, 1px, 1px);
+        clip-path: inset(50%);
+        height   : 1px;
+        margin   : -1px;
+        overflow : hidden;
+        padding  : 0;
+        position : absolute;
+        width    : 1px;
+    }
