--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -33,10 +33,21 @@
                 }
                 margin: 0.2em !important;
                 padding: 0.1em !important;
+            }
 
-                &:focus,
-                &:hover,
-                &:active {
+            &[type='action'] {
+                background: $lightgray;
+
+                &:focus, &:hover, &:active {
+                    background-color: $gray;
+                    color: $accent1;
+                }
+            }
+
+             &[type='roll'] {
+                background: $palecolor;
+
+                &:focus, &:hover, &:active {
                     background-color: $accent3;
                     color: $accent1;
                 }
