--- a/Delta Green by Arc Dream Publishing/src/scss/_variables.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_variables.scss
@@ -11,3 +11,4 @@
     $palecolor: hsla(148, 20%, 82%, 1);
     $dark-font: #000;
     $gray     : hsl(0, 0%, 30%);
+    $lightgray: hsla(0, 0%, 85%, 1);
