finished pc, add translations

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -15,18 +15,27 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 .tabs.grid
   // Buttons to toggle on GM whisper
   input.whisper-toggle(name='attr_gm_toggle' type='hidden' value=' ')
-  button(data-i18n-title='gm-whisper-toggle' name='act_whisper' title='gm whisper toggle' type='action') 
+  button(data-i18n-title='gm whisper toggle' name='act_whisper' title='gm whisper toggle' type='action') 
    span(data-i18n='whisper-gm') Whisper GM
-   span.hidden() gm whisper toggle. current status:
-    span.on() on
-    span.off() off
+   span.hidden(data-i18n='current status:') current status:
+    span.on(data-i18n='on') on
+    span.off(data-i18n='off') off
   // LOGO
   img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
   // CHARACTER SHEETS
-  button(data-i18n-title='sheet-settings' name='act_sheet_select' title='sheet settings' type='action') 
-    span.hidden() sheet settings toggle
+  button(data-i18n-title='sheet settings' name='act_sheet_select' title='sheet settings' type='action') 
+    span.hidden(data-i18n='sheet settings toggle') sheet settings toggle
     span.pictos() y 
 
+// OBJECTS
+// =============================
+- const personData1 = {'name': '1. last name, first name (and alias or code name if applicable)', 'profession': '2. profession (rank if applicable)'};
+- const personData2 = {'employer': '3. employer', 'nationality': '4. nationality'};
+- const personData3 = {'sex': '5. sex', 'age': '6. age and d.o.b.', 'education': '7. education and occupational history'};
+- const statsObject = {strength: 'STR', constitution: 'CON', dexterity: 'DEX', intelligence: 'INT', power: 'POW', charisma: 'CHA'};
+- const skills1 = {'accounting': 10, 'alertness': 20, 'anthropology': 0, 'archeology': '0', 'art': '0', 'artillery': 0, 'athletics': 30, 'bureaucracy': 10, 'computer science': 0, 'craft': 0, 'criminology': 10, 'demolitions': 0, 'disguise': 10, 'dodge': 30, 'drive': 20, 'firearms': 20};
+- const skills2 = {'first aid': 10, 'forensics': 0, 'heavy machinery': 10, 'heavy weapons': 0, 'history': 10, 'humint': 10, 'law': 0, 'medicine': 0, 'melee weapons': 30, 'military science': 0, 'navigate': 10, 'occult': 10, 'persuade': 20, 'pharmacy': 0, 'pilot': 0, 'psychotherapy': 10};
+- const skills3 = {'ride': 10, 'science': 0, 'search': 20, 'sigint': 0, 'stealth': '10', 'surgery': 0, 'survival': 10, 'swim': 20, 'unarmed combat': 40, 'unnatural': 0};
 
 // NPC SHEET
 // =============================
