--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -284,9 +284,7 @@
                         margin-top: 50%;
                     }
 
-                    input[type='number'] {
-                        height: 100%;
-                    }
+                    input[type='number'] { height: 100%; }
 
                     span {
                         font-size: 0.8em;
@@ -296,6 +294,9 @@
                     div.sheet-section {
                         grid-template-columns: 1fr 15em 0.155em 2fr;
                         border-right: 0.15em solid $maincolor;
+
+                        input[type='checkbox'] { margin-top: 50%; }
+
 
                         button {
                             display: inline;
@@ -307,9 +308,7 @@
                             }
                         }
 
-                        label.sheet-custom-label {
-                            grid-column: 1 / 5;
-                        }
+                        label.sheet-custom-label { grid-column: 1 / 5; }
 
                         textarea {
                             margin-bottom: 0em;
@@ -320,6 +319,8 @@
                     }
 
                     div.sheet-repeating-container {
+                        input[type='checkbox'] { margin-top: 20%;  }
+
                         .repcontrol {
                             .repcontrol_add {
                                 right: -75%;
@@ -332,9 +333,7 @@
                     }
                 }
 
-                div.sheet-section-directions {
-                    grid-column: 1 / 4;
-                }
+                div.sheet-section-directions { grid-column: 1 / 4; }
             }
         }
     
