--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -2,7 +2,7 @@
 mixin multiCheckbox(attr, num)
 	- let i = 0;
 	while i < num
-		label(class='styled-checkbox' title=attr + ' ' + ++i)
+		label.styled-checkbox(data-i18n-title=attr + ' ' + ++i title=attr + ' ' + i)
 			input(name='attr_' + attr + '_' + i title='@{repeating_bonds_${x}_' + attr + '}' type='checkbox' value=i)
 
 //SKILL ROWS
@@ -11,14 +11,21 @@ mixin skill(val, key)
 	- const array = ['art', 'craft', 'military science', 'pilot', 'science'];
 	.grid.section.border-bottom
 		- const caps = (key === 'humint' || key === 'sigint') ? key.toUpperCase() : key;
-		label(class='styled-checkbox' title=caps + ' fail checkbox')
-			input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox' value='')
-		button(name=key title=caps + ' roll' type='roll' value='')
-			h3()= caps
-			span()= '(' + val + '%)'
+		label.styled-checkbox(data-i18n-title=caps + ' fail checkbox' title=caps + ' fail checkbox')
+			input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox')
+		button(data-i18n-title=caps + ' roll' name=key title=caps + ' roll' type='roll' value='')
+			h3(data-i18n=caps data-i18n-title=caps title=caps)= caps
+			span(data-i18n='(' + val + '%)')= '(' + val + '%)'
 		.vert-line
-		label(title=caps + ' rank')
-			input(name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
+		label(data-i18n-title=caps + ' rank' title=caps + ' rank')
+			input(data-i18n-placeholder='0' name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
 		- if (array.includes(key))
-			label(class='custom-label' title=key + ' name')
-				textarea(name='attr_' + attr +'_name' placeholder='skill name' title='@{' + attr + '_name}' value='')
+			label.custom-label(data-i18n-title=key + ' name' title=key + ' name')
+				textarea(data-i18n-placeholder='skill name' name='attr_' + attr +'_name' placeholder='skill name' title='@{' + attr + '_name}' value='')
+
+//TRANSLATIONS
+mixin personal(val, key)
+	//- const transKey = val.replace(/\(/g, '').replace(/\)/g, '').replace(/\./g, '').replace(/\,/g, '').replace(/ /g, '-');
+	h2.aligned-left(data-i18n=val data-i18-title=val title=val)=val
+	label(data-i18-title=val title=val)
+		input(data-i18-placeholder=key name='attr_' + key placeholder=key title='${' + key + '}' type='text')
