--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -19,27 +19,25 @@
     @import 'src/scss/_repcontrol';
 
 /* HIDE DIFFERENT SHEET TYPES BY DEFAULT
-============================= */ 
+============================= */
     div.sheet-npc,
     div.sheet-pc,
     div.sheet-settings {
         display: none;
-    }   
+    }
 
-    input.sheet-type[value='npc'] ~  div.sheet-npc,
-    input.sheet-type[value*='character'] ~  div.sheet-pc,
-    input.sheet-type[value*='settings'] ~  div.sheet-settings  {
+    input.sheet-type[value='npc'] ~ div.sheet-npc,
+    input.sheet-type[value='pc'] ~ div.sheet-pc,
+    input.sheet-type[value*='settings'] ~ div.sheet-settings {
         display: grid;
-    }  
+    }   
 
     /* HIGHLIGHT BUTTONS
    ============================= */
     input.sheet-whisper-toggle[value*='gm'] + button[name*='whisper'],
-    input.sheet-type[value*='character'] ~ div.sheet-tabs button[name*='character'],
-    input.sheet-type[value='npc'] ~ div.sheet-tabs button[name*='npc'],
-    input.sheet-type[value*='settings'] ~ div.sheet-tabs button[name*='settings'] {
-        @include back-color($accent3);
-        box-shadow: inset 0px 0px 3px 1px $palecolor;
+    input.sheet-display_string[value*='settings'] ~ div.sheet-tabs button[name='act_toggle_settings'] {
+        @include back-color($gray);
+        box-shadow: inset 0px 0px 3px 1px $accent1;
         color     : $accent1;
     } 
 
