--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -14,7 +14,7 @@ mixin skill(val, key)
 		label.styled-checkbox(data-i18n-title=caps + ' fail checkbox' title=caps + ' fail checkbox')
 			input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox')
 		button(data-i18n-title=caps + ' roll' name=key title=caps + ' roll' type='roll' value='')
-			h3(data-i18n=caps data-i18n-title=caps title=caps)= caps
+			h3(data-i18n=caps title=caps)= caps
 			span(data-i18n='(' + val + '%)')= '(' + val + '%)'
 		.vert-line
 		label(data-i18n-title=caps + ' rank' title=caps + ' rank')
