--- a/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
@@ -36,7 +36,7 @@
         each val, key in statsObject
           .grid.section.border-bottom
             button(name=key data-i18n-title=key + ' roll' title=key + ' roll' type='roll' value='')
-              h3.aligned-left(data-i18n=key data-i18n-title=key)= key
+              h3.aligned-left(data-i18n=key)= key
               span(data-i18n=val)= '(' + val + ')'
             .vert-line
             label(data-i18n-title=key + ' score' title=key + ' score')
@@ -59,12 +59,12 @@
           - const attrName = key.replace(' ','_');
           .grid.section.border-bottom
             .derived-attr
-              h3(class='aligned-left')= key
+              h3.aligned-left(data-i18n=key data-i18n-title=key)= key
               span()= '(' + val + ')'
             .vert-line
             span(class='center' name='attr_' + attrName + '_max' title='@{' + attrName + '_max' + '}')
             .vert-line
-            label(title=key)
+            label(data-i18n-title=key title=key)
               input(name='attr_' + attrName placeholder='10' title='@{' + attrName + '}' type='number')
       //PHYSICAL DESCRIPTION
       .grid.section-physical
@@ -190,7 +190,7 @@
           h2.aligned-left(data-i18n='skill or stat used' data-i18n-title='skill or stat used') skill or stat used
         .repeating-container.border-bottom
           fieldset.repeating_special
-            .grid.section-19.border-bottom
+            .grid.section-19
               label(data-i18n-title='special training input' title='special training input')
                 input(name='attr_special_training' placeholder='special training' title='@{repeating_weapons_${x}_special_training}' type='text' value='')
               .vert-line
