remove unncessary divs

--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -9,19 +9,19 @@ mixin multiCheckbox(attr, num)
 mixin skill(val, key)
 	- const attr = key.replace(' ', '_')
 	- const array = ['art', 'craft', 'military science', 'pilot', 'science'];
-	.grid.section.border-bottom
-		- const caps = (key === 'humint' || key === 'sigint') ? key.toUpperCase() : key;
-		label.styled-checkbox(data-i18n-title=caps + ' fail checkbox' title=caps + ' fail checkbox')
-			input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox')
-		button(data-i18n-title=caps + ' roll' name=key title=caps + ' roll' type='roll' value='')
-			h3(data-i18n=caps title=caps)= caps
-			span(data-i18n='(' + val + '%)')= '(' + val + '%)'
-		.vert-line
-		label(data-i18n-title=caps + ' rank' title=caps + ' rank')
-			input(data-i18n-placeholder='0' name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
-		- if (array.includes(key))
-			label.custom-label(data-i18n-title=key + ' name' title=key + ' name')
-				textarea(data-i18n-placeholder='skill name' name='attr_' + attr +'_name' placeholder='skill name' title='@{' + attr + '_name}' value='')
+	- const caps = (key === 'humint' || key === 'sigint') ? key.toUpperCase() : key;
+	label.styled-checkbox(data-i18n-title=caps + ' fail checkbox' title=caps + ' fail checkbox')
+		input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox')
+	button(data-i18n-title=caps + ' roll' name=key title=caps + ' roll' type='roll' value='')
+		h3(data-i18n=caps title=caps)= caps
+		span(data-i18n='(' + val + '%)')= '(' + val + '%)'
+	.vert-line
+	label(data-i18n-title=caps + ' rank' title=caps + ' rank')
+		input(data-i18n-placeholder='0' name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
+	- if (array.includes(key))
+		label.custom-label(data-i18n-title=key + ' name' title=key + ' name')
+			textarea(data-i18n-placeholder='skill name' name='attr_' + attr +'_name' placeholder='skill name' title='@{' + attr + '_name}' value='')
+	.horz-line
 
 //TRANSLATIONS
 mixin personal(val, key)
