--- a/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
@@ -26,27 +26,27 @@
     //STATISTICS
     .grid.section-body
       .grid.section-stats
-        .grid.section.border-bottom
-          h2.aligned-left(data-i18n='8. statistics' data-i18n-title='8. statistics' title='8. statistics') 8. statistics
+        h2.aligned-left(data-i18n='8. statistics' data-i18n-title='8. statistics' title='8. statistics') 8. statistics
+        .vert-line
+        each string in ['score', 'x5']
+          h2.center(data-i18n=string data-i18n-title=string)= string
           .vert-line
-          each string in ['score', 'x5']
-            h2.center(data-i18n=string data-i18n-title=string)= string
-            .vert-line
-          h2.aligned-left(data-i18n='distinguishing features' data-i18n-title='') distinguishing features
+        h2.aligned-left(data-i18n='distinguishing features' data-i18n-title='') distinguishing features
+        .horz-line
         each val, key in statsObject
-          .grid.section.border-bottom
-            button(name=key data-i18n-title=key + ' roll' title=key + ' roll' type='roll' value='')
-              h3.aligned-left(data-i18n=key)= key
-              span(data-i18n=val)= '(' + val + ')'
-            .vert-line
-            label(data-i18n-title=key + ' score' title=key + ' score')
-              input(data-i18n-placeholder='10' name='attr_' + key + '_score' placeholder='10' title='@{' + key + '_score' + '}' type='number')
-            .vert-line
-            span.center(name='attr_' + key title='@{' + key + '}')
-            .vert-line
-            label(data-i18n-title=key + ' distinguishing features' title=key + ' distinguishing features')
-              input(data-i18n-placeholder='distinguishing features' name='attr_' + key + '_features' placeholder='distinguishing features' title='@{' + key + '_features' + '}' type='text')
-            input(name='attr_' + key type='hidden' value='50')
+          button(name=key data-i18n-title=key + ' roll' title=key + ' roll' type='roll' value='')
+            h3.aligned-left(data-i18n=key)= key
+            span(data-i18n=val)= '(' + val + ')'
+          .vert-line
+          label(data-i18n-title=key + ' score' title=key + ' score')
+            input(data-i18n-placeholder='10' name='attr_' + key + '_score' placeholder='10' title='@{' + key + '_score' + '}' type='number')
+          .vert-line
+          span.center(name='attr_' + key title='@{' + key + '}')
+          .vert-line
+          label(data-i18n-title=key + ' distinguishing features' title=key + ' distinguishing features')
+            input(data-i18n-placeholder='distinguishing features' name='attr_' + key + '_features' placeholder='distinguishing features' title='@{' + key + '_features' + '}' type='text')
+          input(name='attr_' + key type='hidden' value='50')
+          .horz-line
 
       //DERIVED ATTRIBUTES
       .grid.section-derived
@@ -116,9 +116,9 @@
       .grid.section-skill-col
         each val, key in skills3
           +skill(val, key)
-        .border-bottom
-          h3.margin-left(data-i18n='foriegn languages and other skills:' data-i18n-title='foriegn languages and other skills:') foriegn languages and other skills:
         .repeating-container.border-bottom
+          h3.margin-left(data-i18n='foriegn languages and other skills:' data-i18n-title='foriegn languages and other skills:') foriegn languages and other skills:
+          .horz-line
           fieldset.repeating_skills
             .grid.section-repeating.border-bottom
               label.styled-checkbox(data-i18n-title='skill fail checkbox' title='skill fail checkbox')
