--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -164,8 +164,13 @@
            writing-mode: vertical-lr;
         }
 
-        div.sheet-vert-line {
+        div.sheet-vert-line,
+        div.sheet-horz-line {
             @include back-color($maincolor);
+        }
+
+        div.sheet-horz-line {
+            height: 2px;
         }
 
         /* PERSONAL DATA
@@ -188,8 +193,6 @@
                 span { font-size: 0.8em; }
             }
 
-            h2:nth-of-type(2) { text-transform: lowercase; }
-
             h3 {
                 display: inline;
                 margin-right: 2%;
@@ -198,15 +201,11 @@
 
             //STATISTICS
             div.sheet-section-stats {
+                grid-template-columns: 9em 0.155em 2fr 0.155em 1fr 0.155em 14em;
+
                 input[type='number'] { text-align: right; }
-
-                div.sheet-section {
-                    grid-template-columns: 9em 0.155em 2fr 0.155em 1fr 0.155em 14em;
-
-                    span.sheet-center {
-                        padding-top: 25%;
-                    }
-                }
+                span.sheet-center {  padding-top: 25%; }
+                div.sheet-horz-line { grid-column: 1 / 8; }
             }
 
             //DERIVED ATTRIBUTES
@@ -276,7 +275,18 @@
                     }
                 }
 
-                div.sheet-section-skill-col {                    
+                div.sheet-section-skill-col {
+                    grid-template-columns: 2em 15em 0.155em 2fr;
+
+                    &:nth-of-type(1),
+                    &:nth-of-type(2) {
+                        border-right: 0.15em solid $maincolor;
+                    }
+
+                    div.sheet-horz-line {
+                        grid-column: 1 / 5;
+                    }
+
                     input[type='checkbox'] {
                         margin-left: 10%;
                         margin-top: 50%;
@@ -289,34 +299,27 @@
                         text-align: center;
                     }
 
-                    div.sheet-section {
-                        grid-template-columns: 1fr 15em 0.155em 2fr;
-                        border-right: 0.15em solid $maincolor;
+                    button {
+                        display: inline;
 
-                        input[type='checkbox'] { margin-top: 50%; }
-
-
-                        button {
+                        h3 {
                             display: inline;
-
-                            h3 {
-                                display: inline;
-                                margin-right: 5%;
-                                padding-left: 2%;
-                            }
-                        }
-
-                        label.sheet-custom-label { grid-column: 1 / 5; }
-
-                        textarea {
-                            margin-bottom: 0em;
-                            margin-left: 1%;
-                            min-height: 2em;
-                            width: 98%;
+                            margin-right: 5%;
+                            padding-left: 2%;
                         }
                     }
 
+                    label.sheet-custom-label { grid-column: 1 / 5; }
+
+                    textarea {
+                        margin-bottom: 0em;
+                        margin-left: 1%;
+                        min-height: 2em;
+                        width: 98%;
+                    }
+
                     div.sheet-repeating-container {
+                        grid-column: 1 / 5;
                         input[type='checkbox'] { margin-top: 20%;  }
 
                         .repcontrol {
