fixed display issues on tab Grundwerte

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
@@ -668,33 +668,325 @@ input[type="text"].sheet-allgemein  {
 
 /* Sub Grundwerte abgeleitete Eigenschaften */
 
-.sheet-abgeleitete-eigenschaften-grid {
-	display: grid;
-	grid-gap: 5px;
-	grid-template-columns: repeat(8, 1fr);;
-}
-
-.sheet-abgeleitete-eigenschaften2-grid {
-	display: grid;
-	grid-gap: 5px;
-	grid-template-columns: repeat(9, 1fr);;
-}
-
-
-
-.sheet-abgeleitete-eigenschaft {
-	border-radius: 4px;
-	padding: 2px;
-  vertical-align: middle;
-  margin: 2px;
-	text-align: left;
-}
 
 .sheet-abgeleitete-eigenschaften3-grid {
 	display: grid;
 	grid-gap: 5px;
 	grid-template-columns: repeat(5, 1fr);;
 }
+
+/* Sub Grundwerte Grid LE */
+
+.sheet-grundwerte-le-grid {
+	display: grid;
+	grid-gap: 5px;
+	grid-template-columns: repeat(8, 1fr);;
+}
+
+
+.sheet-grid-le1 {
+	grid-column: 1 /1;
+	grid-row: 1 /1;
+}
+
+.sheet-grid-le2 {
+	grid-column: 2 /  2;
+	grid-row: 1 /1;
+
+}
+
+.sheet-grid-le3 {
+	grid-column: 3 /  3;
+	grid-row: 1 /1;
+
+}
+
+.sheet-grid-le4 {
+	grid-column: 4 /  4;
+	grid-row: 1 /1;
+}
+.sheet-grid-le5 {
+	grid-column: 5 /  5;
+	grid-row: 1 /1;
+}
+.sheet-grid-le6 {
+	grid-column: 6 /  6;
+	grid-row: 1 /1;
+}
+.sheet-grid-le7 {
+	grid-column: 7 /  7;
+	grid-row: 1 /1;
+  width: 2.5em;
+}
+
+.sheet-grid-le8 {
+	grid-column: 1 /  1;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-le9 {
+	grid-column: 2 / 2;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-le10 {
+	grid-column: 3 /  3;
+	grid-row: 2 /2;
+}
+.sheet-grid-le11 {
+	grid-column: 4 /  4;
+	grid-row: 2 /2;
+}
+.sheet-grid-le12 {
+	grid-column: 5 /  5;
+	grid-row: 2 /2;
+}
+.sheet-grid-le13 {
+	grid-column: 6 / 6;
+	grid-row: 2 /2;
+}
+.sheet-grid-le14 {
+	grid-column: 7 /  7;
+	grid-row: 2 /2;
+}
+.sheet-grid-le15 {
+	grid-column: 8 /  8;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-le16 {
+	grid-column: 1 /  1;
+	grid-row: 3 /3;
+}
+
+.sheet-grid-le17 {
+	grid-column: 2 /  2;
+	grid-row: 3 /3;
+}
+
+.sheet-grid-le18 {
+	grid-column: 3 /  3;
+	grid-row: 3 /3;
+}
+.sheet-grid-le19 {
+	grid-column: 4 /  4;
+	grid-row: 3 /3;
+}
+
+.sheet-grid-le20 {
+	grid-column: 5 /  5;
+	grid-row: 3 /3;
+}
+
+.sheet-grid-le21 {
+	grid-column: 6 /  6;
+	grid-row: 3 /3;
+}
+
+.sheet-grid-le22 {
+	grid-column: 7 /  7;
+	grid-row: 3 /3;
+
+}
+
+/* Sub Grundwerte Grid AE */
+
+.sheet-grundwerte-ae-grid {
+	display: grid;
+	grid-gap: 5px;
+	grid-template-columns: repeat(8, 1fr);;
+}
+
+
+.sheet-grid-ae1 {
+	grid-column: 1 /1;
+	grid-row: 1 /1;
+}
+
+.sheet-grid-ae2 {
+	grid-column: 2 /  2;
+	grid-row: 1 /1;
+
+}
+
+.sheet-grid-ae3 {
+	grid-column: 3 /  3;
+	grid-row: 1 /1;
+
+}
+
+.sheet-grid-ae4 {
+	grid-column: 4 /  4;
+	grid-row: 1 /1;
+}
+.sheet-grid-ae5 {
+	grid-column: 5 /  5;
+	grid-row: 1 /1;
+}
+.sheet-grid-ae6 {
+	grid-column: 6 /  6;
+	grid-row: 1 /1;
+  width: 4em;
+}
+.sheet-grid-ae7 {
+	grid-column: 7 /  7;
+	grid-row: 1 /1;
+}
+
+.sheet-grid-ae8 {
+	grid-column: 8 /  8;
+	grid-row: 1 /1;
+}
+
+.sheet-grid-ae9 {
+	grid-column: 1 / 1;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-ae10 {
+	grid-column: 2 /  2;
+	grid-row: 2 /2;
+}
+.sheet-grid-ae11 {
+	grid-column: 3 /  3;
+	grid-row: 2 /2;
+}
+.sheet-grid-ae12 {
+	grid-column: 4 /  4;
+	grid-row: 2 /2;
+}
+.sheet-grid-ae13 {
+	grid-column: 5 / 5;
+	grid-row: 2 /2;
+}
+.sheet-grid-ae14 {
+	grid-column: 6 /  6;
+	grid-row: 2 /2;
+}
+.sheet-grid-ae15 {
+	grid-column: 7 /  7;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-ae16 {
+	grid-column: 8 /  8;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-ae17 {
+	grid-column: 1 /  1;
+	grid-row: 3 /3;
+}
+
+.sheet-grid-ae18 {
+	grid-column: 2 /  2;
+	grid-row: 3 /3;
+}
+.sheet-grid-ae19 {
+	grid-column: 3 /  3;
+	grid-row: 3 /3;
+  width: 2.5em;
+}
+
+/* Sub Grundwerte Grid KE */
+
+.sheet-grundwerte-ke-grid {
+	display: grid;
+	grid-gap: 5px;
+	grid-template-columns: repeat(8, 1fr);;
+}
+
+
+.sheet-grid-ke1 {
+	grid-column: 1 /1;
+	grid-row: 1 /1;
+}
+
+.sheet-grid-ke2 {
+	grid-column: 2 /  2;
+	grid-row: 1 /1;
+
+}
+
+.sheet-grid-ke3 {
+	grid-column: 3 /  3;
+	grid-row: 1 /1;
+
+}
+
+.sheet-grid-ke4 {
+	grid-column: 4 /  4;
+	grid-row: 1 /1;
+}
+.sheet-grid-ke5 {
+	grid-column: 5 /  5;
+	grid-row: 1 /1;
+}
+.sheet-grid-ke6 {
+	grid-column: 6 /  6;
+	grid-row: 1 /1;
+  width: 4em;
+}
+.sheet-grid-ke7 {
+	grid-column: 7 /  7;
+	grid-row: 1 /1;
+}
+
+.sheet-grid-ke8 {
+	grid-column: 8 /  8;
+	grid-row: 1 /1;
+}
+
+.sheet-grid-ke9 {
+	grid-column: 1 / 1;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-ke10 {
+	grid-column: 2 /  2;
+	grid-row: 2 /2;
+}
+.sheet-grid-ke11 {
+	grid-column: 3 /  3;
+	grid-row: 2 /2;
+}
+.sheet-grid-ke12 {
+	grid-column: 4 /  4;
+	grid-row: 2 /2;
+}
+.sheet-grid-ke13 {
+	grid-column: 5 / 5;
+	grid-row: 2 /2;
+}
+.sheet-grid-ke14 {
+	grid-column: 6 /  6;
+	grid-row: 2 /2;
+}
+.sheet-grid-ke15 {
+	grid-column: 7 /  7;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-ke16 {
+	grid-column: 8 /  8;
+	grid-row: 2 /2;
+}
+
+.sheet-grid-ke17 {
+	grid-column: 1 /  1;
+	grid-row: 3 /3;
+}
+
+.sheet-grid-ke18 {
+	grid-column: 2 /  2;
+	grid-row: 3 /3;
+}
+.sheet-grid-ke19 {
+	grid-column: 3 /  3;
+	grid-row: 3 /3;
+  width: 2.5em;
+}
+
 
 
 /* Grid Modifikator */
