[update] Fix for history + option

--- a/Eclipse Phase V2/Eclipse Phase V2.css
+++ b/Eclipse Phase V2/Eclipse Phase V2.css
@@ -1772,6 +1772,14 @@ input.sheet-hiddenRevealWeaponHide[value="o"] ~ button[type="roll"]
 	margin-top:5px;
 }
 
+.sheet-notes > .sheet-block > .repcontainer,
+.sheet-language > .sheet-block > .repcontainer,
+.sheet-backup > .sheet-block > .repcontainer,
+.sheet-forks > .sheet-block > .repcontainer
+{
+	flex-wrap:wrap;
+}
+
 .sheet-notes > .sheet-block > .repcontainer > .repitem,
 .sheet-language > .sheet-block > .repcontainer > .repitem,
 .sheet-backup > .sheet-block > .repcontainer > .repitem,
@@ -1786,9 +1794,15 @@ input.sheet-hiddenRevealWeaponHide[value="o"] ~ button[type="roll"]
 	width:100%;
 }
 
+.sheet-language > .sheet-block > .repcontainer > .repitem
+{
+	height:30px;
+}
+
 .sheet-language > .sheet-block > .repcontainer > .repitem > input[type="text"]
 {
 	width:100%;
+	padding-top: 13px;
 }
 
 .sheet-combatApt
