Saving Hit Points Promise

--- a/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
@@ -39,7 +39,7 @@
             span(data-i18n=val)= '(' + val + ')'
           .vert-line
           label(data-i18n-title=key + ' score' title=key + ' score')
-            input(data-i18n-placeholder='10' name='attr_' + key + '_score' placeholder='10' title='@{' + key + '_score' + '}' type='number')
+            input(data-i18n-placeholder='10' min=0 name='attr_' + key + '_score' placeholder='10' title='@{' + key + '_score' + '}' type='number' value='10')
           .vert-line
           span.center(name='attr_' + key title='@{' + key + '}')
           .vert-line
