stat sheet workers done

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -1,8 +1,8 @@
-//VERSION
-// =============================
+//- VERSION
+//- =============================
 input(name='attr_version' type='hidden' value='1')
 
-//MIXINS
+//- MIXINS
 include src/pug/_mixins.pug
 
 // TABS
@@ -23,13 +23,13 @@ input.display_string(name='attr_toggles' type='hidden' value='')
   // LOGO
   img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
   // CHARACTER SHEETS
-  button(data-i18n-title='sheet settings' name='act_settings' title='sheet settings' type='action') 
+  button(data-i18n-title='sheet settings' name='act_toggle_settings' title='sheet settings' type='action') 
     span.hidden(data-i18n='sheet settings toggle') sheet settings toggle
     span.pictos() y 
 
 
-// OBJECTS
-// =============================
+//- OBJECTS
+//- =============================
 include src/pug/_objects.pug
 
 
@@ -41,24 +41,18 @@ include src/pug/_objects.pug
   .box.npc-flex
     p MORE NPC STUFF 
 
-
-//PC SHEET
+// PC SHEET
 // =============================
 include src/pug/_pc.pug
 
-
-//SETTINGS SHEET
+// SETTINGS SHEET
 // =============================
 .settings
   select(name='attr_sheet_select' title='character sheet select' selected)
-    option(data-i18n='pc' value='character') character
+    option(data-i18n='pc' value='pc') character
     option(data-i18n='npc' value='npc') npc
 
-//HIDDEN ATTRIBUTES
-// =============================
-
-
-//ROLL TEMPLATE
+// ROLL TEMPLATE
 // =============================
 //include src/pug/rolltemplate.pug
 
