--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -28,9 +28,14 @@
 
     input.sheet-type[value='npc'] ~ div.sheet-npc,
     input.sheet-type[value='pc'] ~ div.sheet-pc,
-    input.sheet-type[value*='settings'] ~ div.sheet-settings {
+    input.sheet-display_string[value*='settings'] ~ div.sheet-settings {
         display: grid;
-    }   
+    }
+
+    input.sheet-display_string[value*='settings'] ~ div.sheet-npc,
+    input.sheet-display_string[value*='settings'] ~ div.sheet-pc {
+        display: none;
+    }
 
     /* HIGHLIGHT BUTTONS
    ============================= */
@@ -212,6 +217,10 @@
             div.sheet-section-derived {
                 div.sheet-section {
                     grid-template-columns: 12em 0.155em 1fr 0.155em 1fr;
+                }
+
+                span {
+                    padding: 4%;
                 }
             }
 
