--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -1,11 +1,11 @@
-//MULTIPLE STYLED CHECKBOXES
+//- MULTIPLE STYLED CHECKBOXES
 mixin multiCheckbox(attr, num)
 	- let i = 0;
 	while i < num
 		label.styled-checkbox(data-i18n-title=attr + ' ' + ++i title=attr + ' ' + i)
 			input(name='attr_' + attr + '_' + i title='@{repeating_bonds_${x}_' + attr + '}' type='checkbox' value=i)
 
-//SKILL ROWS
+//- SKILL ROWS
 mixin skill(val, key)
 	- const attr = key.replace(' ', '_')
 	- const array = ['art', 'craft', 'military science', 'pilot', 'science'];
@@ -23,7 +23,7 @@ mixin skill(val, key)
 			textarea(data-i18n-placeholder='skill name' name='attr_' + attr +'_name' placeholder='skill name' title='@{' + attr + '_name}' value='')
 	.horz-line
 
-//TRANSLATIONS
+//- TRANSLATIONS
 mixin personal(val, key)
 	//- const transKey = val.replace(/\(/g, '').replace(/\)/g, '').replace(/\./g, '').replace(/\,/g, '').replace(/ /g, '-');
 	h2.aligned-left(data-i18n=val data-i18-title=val title=val)=val
