--- a/Delta Green by Arc Dream Publishing/src/pug/_objects.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_objects.pug
@@ -1,3 +1,5 @@
+//- OBJECTS
+//- =============================
 - const personData1 = {'name': '1. last name, first name (and alias or code name if applicable)', 'profession': '2. profession (rank if applicable)'};
 - const personData2 = {'employer': '3. employer', 'nationality': '4. nationality'};
 - const personData3 = {'sex': '5. sex', 'age': '6. age and d.o.b.', 'education': '7. education and occupational history'};
