--- a/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
@@ -1,3 +1,4 @@
+//- PLAYER CHARACTER
 .pc
   //PERSONAL DATA
   .grid.header-body.personal-data.border
@@ -55,7 +56,8 @@
           each string in ['maximum', 'current']
             .vert-line
             h2(class='center')= string
-        each val, key in {'hit points': 'HP', 'willpower points': 'WP', 'sanity points': 'SAN', 'breaking points': 'BP'}
+        each val, key in {'hit points': 'HP', 'willpower points': 'WP', 'sanity points': 'SAN', 'breaking point': 'BP'}
+          - const presetValue =  (val === 'HP' || val === 'WP') ? 10 : (val === 'SAN') ? 50 : 40;
           - const attrName = key.replace(' ','_');
           .grid.section.border-bottom
             .derived-attr
@@ -65,7 +67,8 @@
             span(class='center' name='attr_' + attrName + '_max' title='@{' + attrName + '_max' + '}')
             .vert-line
             label(data-i18n-title=key title=key)
-              input(name='attr_' + attrName placeholder='10' title='@{' + attrName + '}' type='number')
+              input(name='attr_' + attrName placeholder='10' title='@{' + attrName + '}' type='number' value=presetValue)
+            input(name='attr_' + attrName + '_max' type='hidden' value=presetValue)
       //PHYSICAL DESCRIPTION
       .grid.section-physical
         h2(class='aligned-left') 9. physical description
