update add skill & attr rolls

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -54,7 +54,7 @@ include src/pug/_pc.pug
 
 // ROLL TEMPLATE
 // =============================
-//include src/pug/rolltemplate.pug
+include src/pug/rolltemplate.pug
 
 
 //SHEETWORKERS
