--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -18,6 +18,10 @@
 //=============================
     @import 'src/scss/_repcontrol';
 
+// ROLL TEMPLATE
+//=============================
+    @import 'src/scss/_rolltemplate';
+
 /* HIDE DIFFERENT SHEET TYPES BY DEFAULT
 ============================= */
     div.sheet-npc,
@@ -122,14 +126,6 @@
             width: 1.5em;
         } 
     }
-
-    /* NOT USED AT MOMENT 
-    button.sheet-pictos {
-        @include grid-area(1, 1, 1, 1);
-        height: 1.5em;
-        width: 1.5em;
-        z-index: 2;
-    } */
 
 /* NPC SHEET
 ============================= */
@@ -329,6 +325,7 @@
 
                     div.sheet-repeating-container {
                         grid-column: 1 / 5;
+                        min-height: 285px;
                         input[type='checkbox'] { margin-top: 20%;  }
 
                         .repcontrol {
