--- a/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
@@ -35,7 +35,8 @@
         h2.aligned-left(data-i18n='distinguishing features' data-i18n-title='') distinguishing features
         .horz-line
         each val, key in statsObject
-          button(name=key data-i18n-title=key + ' roll' title=key + ' roll' type='roll' value='')
+          - const statRollValue = `@{gm_toggle} &{template:rolls} {{header=^{${key}}}} {{subheader=@{${key}}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}`;
+          button(name=key data-i18n-title=key + ' roll' title=key + ' roll' type='roll' value!=statRollValue)
             h3.aligned-left(data-i18n=key)= key
             span(data-i18n=val)= '(' + val + ')'
           .vert-line
