--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -7,17 +7,18 @@ mixin multiCheckbox(attr, num)
 
 //- SKILL ROWS
 mixin skill(val, key)
-	- const attr = key.replace(' ', '_')
+	- const attr = key.replace(' ', '_');
 	- const array = ['art', 'craft', 'military science', 'pilot', 'science'];
 	- const caps = (key === 'humint' || key === 'sigint') ? key.toUpperCase() : key;
+	- const skillRollValue = `@{gm_toggle} &{template:rolls} {{header=^{${key}}}} {{subheader=@{${attr}}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}`;
 	label.styled-checkbox(data-i18n-title=caps + ' fail checkbox' title=caps + ' fail checkbox')
 		input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox')
-	button(data-i18n-title=caps + ' roll' name=key title=caps + ' roll' type='roll' value='')
+	button(data-i18n-title=caps + ' roll' name=key title=caps + ' roll' type='roll' value=skillRollValue)
 		h3(data-i18n=caps title=caps)= caps
 		span(data-i18n='(' + val + '%)')= '(' + val + '%)'
 	.vert-line
 	label(data-i18n-title=caps + ' rank' title=caps + ' rank')
-		input(data-i18n-placeholder='0' name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
+		input(data-i18n-placeholder='0' name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value=val)
 	- if (array.includes(key))
 		label.custom-label(data-i18n-title=key + ' name' title=key + ' name')
 			textarea(data-i18n-placeholder='skill name' name='attr_' + attr +'_name' placeholder='skill name' title='@{' + attr + '_name}' value='')
