--- a/Delta Green by Arc Dream Publishing/src/pug/rolltemplate.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/rolltemplate.pug
@@ -1,17 +1,20 @@
-<!-- ROLL TEMPLATE
-   ============================= -->
+//- ROLL TEMPLATE
+//- ============================= -->
 .rolltemplates
   rolltemplate.sheet-rolltemplate-rolls
-    // - Display a header on the template -
-    .sheet-template-header
-      | {{#header}}{{header}}{{/header}}
-    // - Display the dice roll in the template -
-    .sheet-template-body
-      | {{#dice}}
-      .sheet-template-row {{dice}}
-      | {{/dice}}
-      // - Display a description. This is great for text included with a roll -
-      | {{#desc}}
-      .sheet-template-row
-        span.sheet-template-desc
-      | {{/desc}}
+    .sheet-template-container
+      // - Display a header on the template -
+      .sheet-template-header
+        h1 {{#header}}{{header}}{{/header}}
+        h2 {{#subheader}}({{subheader}}%){{/subheader}}
+      // - Display the dice roll in the template -
+      .sheet-template-body
+        .sheet-template-row
+          span.inlinerollresult {{#rollTotal() dice 10}}{{/rollTotal() dice 10}}{{#rollLess() dice 10}}{{dice}}{{/rollLess() dice 10}}
+          span.inlinerollresult {{#rollTotal() dice2 10}}0{{/rollTotal() dice2 10}}{{#rollLess() dice2 10}}{{dice2}}{{/rollLess() dice2 10}}
+          span.percent %
+        // - Display a description. This is great for text included with a roll -
+        | {{#desc}}
+        .sheet-template-row
+          span.sheet-template-desc
+        | {{/desc}}
