[Knight] Fix for textarea

--- a/Knight/knight.css
+++ b/Knight/knight.css
@@ -83,6 +83,8 @@ div.sheet-autoex > span
 	text-align: inherit;
 	min-height: inherit;
 	height:100%;
+	word-wrap:anywhere;
+	padding-left:2px;
 }
 
 div.sheet-autoex > textarea
